--- a/src/pages/singlePage/singlePage.scss
+++ b/src/pages/singlePage/singlePage.scss
@@ -28,9 +28,9 @@
 }
 
 /* 页码提示 */
-.page-indicator {
+.page-id {
     position: absolute;
-    top: 70px;
+    top: 20px;
     right: 10px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
