--- a/src/utils/createProgress/index.scss
+++ b/src/utils/createProgress/index.scss
@@ -1,7 +1,7 @@
 $primary: #409eff;
-$success: #67c23a;
-$zip: #ffb63e;
-$base64: #484540;
+$success: #10b981;
+$zip: #36d399;
+$base64: #ff9f1c;
 
 .download-progress {
     position: absolute;
